# wirefit

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  LAUNCH.md  LOCAL-DEMO.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml
action/: action.yml
actions/check/: action.yml
actions/pages/: action.yml
ci/gitlab/: wirefit.gitlab-ci.yml
cmd/wirefit/: deploy.go  extractortest.go  init.go  main.go  overrideadd.go  promote.go  promote_test.go  render.go  render_test.go  report.go  reporthtml.go  workflow.go  workflow_test.go
cmd/wirefit-java/: main.go  main_test.go
cmd/wirefit-py/: main.go  main_test.go
cmd/wirefit-ts/: main.go  main_test.go
conformance/: go.mod  run.sh
docs/: CONTRACTS-REPO-SETUP.md  DEMO-FLOW.md  USER-GUIDE.md  deck-src.js  extractor-protocol.md  wirefit-intro.pptx
examples/: demo-deploy.sh  demo.sh
examples/gradle-service/: build.gradle  contracts.yaml
examples/maven-service/: contracts.yaml  pom.xml
examples/order-service/: contracts.yaml
examples/web-app/: contracts.yaml
examples/web-app-ts/: contracts.yaml
examples/web-app-zod/: contracts.yaml  package-lock.json  package.json
extractors/golang/: README.md
extractors/java/: README.md  fetch-jars.sh  test.sh
extractors/python/: README.md  wirefit_extract_py.py
packaging/crates-placeholder/: Cargo.toml  README.md
packaging/crates-placeholder/src/: lib.rs
packaging/pypi-placeholder/: README.md  pyproject.toml
packaging/pypi-placeholder/src/wirefit/: __init__.py
packaging/pypi-placeholder/src/wirefit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+112 files in other folders)
